--- a/lib/web/templates/admin/proficiency/index.html.eex
+++ b/lib/web/templates/admin/proficiency/index.html.eex
@@ -1,6 +1,6 @@
 <section class="content-header">
   <h1>
-    Abilities
+    Proficiencies
   </h1>
 
   <ol class="breadcrumb">
@@ -9,7 +9,7 @@
         <i class="fa fa-dashboard"></i> Home
       <% end %>
     </li>
-    <li class="active">Abilities</li>
+    <li class="active">Proficiencies</li>
   </ol>
 </section>
 
@@ -19,7 +19,7 @@
       <div class="box box-primary">
         <div class="box-header">
           <div class="box-tools">
-            <%= link("New Ability", to: ability_path(@conn, :new), class: "btn btn-primary") %>
+            <%= link("New Proficiency", to: proficiency_path(@conn, :new), class: "btn btn-primary") %>
           </div>
         </div>
         <div class="box-body">
@@ -33,13 +33,13 @@
                 </tr>
               </thead>
               <tbody>
-                <%= Enum.map @abilitys, fn (ability) -> %>
+                <%= Enum.map @proficiencies, fn (proficiency) -> %>
                   <tr>
-                    <td><%= ability.id %></td>
-                    <td><%= ability.name %></td>
+                    <td><%= proficiency.id %></td>
+                    <td><%= proficiency.name %></td>
                     <td>
-                      <%= link("View", to: ability_path(@conn, :show, ability.id), class: "btn btn-default btn-xs") %>
-                      <%= link("Edit", to: ability_path(@conn, :edit, ability.id), class: "btn btn-default btn-xs") %>
+                      <%= link("View", to: proficiency_path(@conn, :show, proficiency.id), class: "btn btn-default btn-xs") %>
+                      <%= link("Edit", to: proficiency_path(@conn, :edit, proficiency.id), class: "btn btn-default btn-xs") %>
                     </td>
                   </tr>
                 <% end %>
