--- a/lib/web/templates/admin/proficiency/new.html.eex
+++ b/lib/web/templates/admin/proficiency/new.html.eex
@@ -1,6 +1,6 @@
 <section class="content-header">
   <h1>
-    New Ability
+    New Proficiency
   </h1>
 
   <ol class="breadcrumb">
@@ -9,7 +9,7 @@
         <i class="fa fa-dashboard"></i> Home
       <% end %>
     </li>
-    <li><%= link("Abilities", to: ability_path(@conn, :index)) %></li>
+    <li><%= link("Proficiencies", to: proficiency_path(@conn, :index)) %></li>
     <li class="active">New</li>
   </ol>
 </section>
@@ -17,7 +17,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <%= render("_form.html", path: ability_path(@conn, :create), changeset: @changeset, title: "New", submit: "Create") %>
+      <%= render("_form.html", path: proficiency_path(@conn, :create), changeset: @changeset, title: "New", submit: "Create") %>
     </div>
   </div>
 </section>
