--- a/lib/web/templates/admin/room_exit/new.html.eex
+++ b/lib/web/templates/admin/room_exit/new.html.eex
@@ -44,6 +44,13 @@
             </div>
 
             <%= FormView.checkbox_field(f, :has_door, label: "Has Door?") %>
+
+            <div class="form-group">
+              <%= label f, :proficiencies, class: "col-md-4" %>
+              <div class="col-md-8">
+                <%= React.react_component("Components.ExitProficiencies", name: "exit[proficiencies]", proficiencies: proficiencies(@proficiencies)) %>
+              </div>
+            </div>
           </div>
 
           <div class="box-footer">
