--- a/lib/web/templates/admin/room_exit/new.html.eex
+++ b/lib/web/templates/admin/room_exit/new.html.eex
@@ -46,9 +46,9 @@
             <%= FormView.checkbox_field(f, :has_door, label: "Has Door?") %>
 
             <div class="form-group">
-              <%= label f, :proficiencies, class: "col-md-4" %>
+              <%= label f, :requirements, class: "col-md-4" %>
               <div class="col-md-8">
-                <%= React.react_component("Components.ExitProficiencies", name: "exit[proficiencies]", proficiencies: proficiencies(@proficiencies)) %>
+                <%= React.react_component("Components.ExitProficiencies", name: "exit[requirements]", proficiencies: proficiencies(@proficiencies)) %>
               </div>
             </div>
           </div>
