--- a/lib/web/templates/admin/color/index.html.eex
+++ b/lib/web/templates/admin/color/index.html.eex
@@ -26,16 +26,16 @@
       </div>
     </div>
 
-    <div class="col-md-4">
+    <%# <div class="col-md-4">
       <div class="box">
         <div class="box-header">
           <h3 class="box-title">Map Colors</h3>
         </div>
         <div class="box-body">
-          <pre class="console"><%= render("_map_colors.html") %></pre>
-        </div>
+          <pre class="console"><%= render("_map_colors.html")</pre> %>
+        <%# </div>
       </div>
-    </div>
+    </div> %>
 
     <div class="col-md-4">
       <div class="box">
