Set up description for the game to put on the home page

--- a/lib/web/templates/admin/config/index.html.eex
+++ b/lib/web/templates/admin/config/index.html.eex
@@ -42,6 +42,13 @@
                 </td>
               </tr>
               <tr>
+                <th>Description</th>
+                <td><%= Config.description() %></td>
+                <td>
+                  <%= link("Edit", to: config_path(@conn, :edit, "description"), class: "btn btn-default btn-xs") %>
+                </td>
+              </tr>
+              <tr>
                 <th>Message of the day</th>
                 <td><pre><%= Config.motd("Not set") %></pre></td>
                 <td>
