--- a/lib/web/templates/page/index.html.eex
+++ b/lib/web/templates/page/index.html.eex
@@ -2,6 +2,8 @@
   <div class="col-md-6 text-center text-md-left">
     <h1 class="mb-3"><%= Config.game_name() %></h1>
 
+    <p><%= Config.description() %></p>
+
     <p>
       Connect with telnet: <code><%= Config.host() %>:<%= Config.port() %></code>
     </p>
