--- a/lib/web/templates/help/index.html.eex
+++ b/lib/web/templates/help/index.html.eex
@@ -10,6 +10,8 @@
           <%= case help_topic do %>
             <% %BuiltIn{} -> %>
               <%= link(help_topic.name, to: public_help_path(@conn, :built_in, help_topic.id)) %>
+            <% %Proficiency{} -> %>
+              <%= link(help_topic.name, to: public_help_path(@conn, :proficiency, help_topic.id)) %>
             <% _ -> %>
               <%= link(help_topic.name, to: public_help_path(@conn, :show, help_topic.id)) %>
           <% end %>
