--- a/lib/web/templates/admin/zone/show.html.eex
+++ b/lib/web/templates/admin/zone/show.html.eex
@@ -114,7 +114,7 @@
       <div class="col-md-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title">Rooms</h3>
+            <h3 class="box-title">Rooms (<%= Enum.count(@zone.rooms) %>)</h3>
             <div class="box-tools">
               <%= link("Add Room", to: zone_room_path(@conn, :new, @zone.id), class: "btn btn-primary") %>
             </div>
