Upgrade Phoenix and other deps

--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -254,7 +254,7 @@
           </section>
         <% end %>
 
-        <%= render @view_module, @view_template, assigns %>
+        <%= @inner_content %>
       </div>
 
       <footer class="main-footer">
