--- a/lib/web/templates/layout/play.html.eex
+++ b/lib/web/templates/layout/play.html.eex
@@ -13,7 +13,7 @@
   </head>
 
   <body id="body" data-character-token="<%= @conn |> character_token() %>">
-    <%= render @view_module, @view_template, assigns %>
+    <%= @inner_content %>
     <script src="<%= static_path(@conn, "/js/play.js") %>"></script>
   </body>
 </html>
