--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary" />
   </head>
   <body class="bg-gray-100 admin">
-    <div class="md:w-full md:z-20 flex flex-row flex-wrap items-center bg-white p-5 border-b border-blue-300">
+    <div class="md:w-full md:z-20 flex flex-row flex-wrap items-center bg-white p-5 border-b border-purple-400">
       <div class="w-56 flex flex-row items-center">
         <%= link("ExVenture", to: Routes.admin_dashboard_path(@conn, :index), class: "ml-1 flex-1 font-bold") %>
       </div>
@@ -35,7 +35,7 @@
     </div>
 
     <div class="flex flex-col md:flex-row md:min-h-screen w-full">
-      <div class="flex flex-col w-full md:w-64 text-gray-700 bg-gray-800 border-r border-blue-300 flex-shrink-0">
+      <div class="flex flex-col w-full md:w-64 text-gray-700 bg-gray-800 border-r border-purple-400 flex-shrink-0">
         <nav class="flex-grow md:block md:overflow-y-auto">
           <%= link(to: Routes.admin_dashboard_path(@conn, :index), class: "active") do %>
             <i class="fas fa-tachometer-alt mr-4"></i> Dashboard
