Convert tailwind primitives into high level classes
To help making new sections of the admin easier

--- a/lib/web/templates/admin/zone/index.html.eex
+++ b/lib/web/templates/admin/zone/index.html.eex
@@ -1,29 +1,30 @@
-<div class="flex flex-row items-center h-12">
+<div class="page-header">
   <h1 class="text-xl font-bold">Zones</h1>
 
-  <div class="flex-grow flex justify-end">
-    <%= link("New Zone", to: Routes.admin_zone_path(@conn, :new), class: "bg-purple-500 text-sm text-white font-bold rounded px-4 py-2") %>
+  <div class="actions">
+    <%= link("New Zone", to: Routes.admin_zone_path(@conn, :new), class: "text-sm btn-primary") %>
   </div>
 </div>
 
-<div class="border-t-2 border-purple-600 rounded mt-2">
-  <div class="border border-gray-200 p-2 bg-white">
-    <table class="table-auto w-full">
+<div class="panel">
+  <div class="panel-container">
+    <table class="table">
       <thead>
         <tr>
-          <th class="px-4 py-2">Name</th>
-          <th class="px-4 py-2">Actions</th>
+          <th>Name</th>
+          <th>Actions</th>
         </tr>
       </thead>
 
       <tbody>
         <%= Enum.map(@zones, fn zone -> %>
-          <tr>
-            <td class="border-t px-4 py-2">
+          <tr class="border-t">
+            <td>
               <%= link(zone.name, to: Routes.admin_zone_path(@conn, :show, zone.id), class: "text-blue-400") %>
             </td>
-            <td class="border-t px-4 py-2 flex justify-end">
-              <%= link("View", to: Routes.admin_zone_path(@conn, :show, zone.id), class: "text-xs bg-gray-200 border rounded px-3 py-1") %>
+            <td class="actions">
+              <%= link("View", to: Routes.admin_zone_path(@conn, :show, zone.id), class: "text-xs btn-secondary") %>
+              <%= link("Edit", to: Routes.admin_zone_path(@conn, :edit, zone.id), class: "text-xs btn-secondary") %>
             </td>
           </tr>
         <% end) %>
