--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -33,6 +33,30 @@
 }
 
 .admin {
+  .btn-primary {
+    @apply bg-purple-500 text-white font-bold py-2 px-4 rounded;
+
+    &:focus {
+      @apply outline-none shadow-outline;
+    }
+
+    &:hover {
+      @apply bg-purple-700;
+    }
+  }
+
+  .btn-secondary {
+    @apply bg-gray-200 font-bold py-2 px-4 rounded;
+
+    &:focus {
+      @apply outline-none shadow-outline;
+    }
+
+    &:hover {
+      @apply bg-gray-400;
+    }
+  }
+
   nav a {
     @apply block px-2 py-3 text-white bg-gray-700 border-l-4 border-gray-700;
   }
@@ -43,6 +67,52 @@
 
   nav a.active {
     @apply bg-gray-800 border-purple-400;
+  }
+
+  .page-header {
+    @apply flex flex-row items-center h-12;
+  }
+
+  .actions {
+    @apply flex-grow flex justify-end gap-1;
+  }
+
+  .panel {
+    @apply border-t-2 border-purple-600 rounded mt-2;
+  }
+
+  .panel-container {
+    @apply border border-gray-200 p-2 bg-white;
+  }
+
+  .table {
+    @apply table-auto w-full mt-2;
+
+    th {
+      @apply px-4 py-2;
+    }
+
+    td {
+      @apply px-4 py-2;
+    }
+  }
+
+  .input-group {
+    @apply mb-6;
+  }
+
+  @screen md {
+    .input-group {
+      @apply flex items-center;
+
+      *:first-child {
+        @apply w-1/3;
+      }
+
+      *:nth-child(2) {
+        @apply w-2/3;
+      }
+    }
   }
 }
 
