--- a/lib/web/templates/admin/zone/edit.html.eex
+++ b/lib/web/templates/admin/zone/edit.html.eex
@@ -1,39 +1,15 @@
-<div class="flex flex-row items-center h-12">
+<div class="page-header">
   <h1 class="text-xl font-bold">
     <%= link("Zones", to: Routes.admin_zone_path(@conn, :index), class: "text-blue-700") %> &raquo;
-    Editing <%= @zone.name %>
+    <%= link(@zone.name, to: Routes.admin_zone_path(@conn, :show, @zone.id), class: "text-blue-700") %> &raquo;
+    Editing
   </h1>
 </div>
 
-<div class="border-t-2 border-purple-600 rounded mt-2">
-  <div class="border border-gray-200 p-2 bg-white">
+<div class="panel">
+  <div class="panel-container">
     <h2 class="text-lg">Edit</h2>
 
-    <%= form_for(@changeset, Routes.admin_zone_path(@conn, :update, @zone.id), fn f -> %>
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3">
-          <%= label(f, :name, class: "label") %>
-        </div>
-        <div class="md:w-2/3">
-          <%= text_input(f, :name, class: "input") %>
-        </div>
-      </div>
-
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3">
-          <%= label(f, :description, class: "label") %>
-        </div>
-        <div class="md:w-2/3">
-          <%= textarea(f, :description, class: "input", rows: 5) %>
-        </div>
-      </div>
-
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3"></div>
-        <div class="md:w-2/3">
-          <%= submit("Save", class: "btn-primary") %>
-        </div>
-      </div>
-    <% end) %>
+    <%= render("_form.html", changeset: @changeset, url: Routes.admin_zone_path(@conn, :edit, @zone.id), submit: "Update") %>
   </div>
 </div>
