--- a/lib/web/templates/admin/zone/_form.html.eex
+++ b/lib/web/templates/admin/zone/_form.html.eex
@@ -1,13 +1,7 @@
 <%= form_for(@changeset, @url, fn f -> %>
-  <div class="input-group">
-    <%= label(f, :name, class: "label") %>
-    <%= text_input(f, :name, class: "input") %>
-  </div>
+  <%= FormView.text_field(f, :name) %>
 
-  <div class="input-group">
-    <%= label(f, :description, class: "label") %>
-    <%= textarea(f, :description, class: "input", rows: 5) %>
-  </div>
+  <%= FormView.textarea_field(f, :description, rows: 5) %>
 
   <div class="input-group">
     <div></div>
