--- a/lib/web/templates/admin/zone/edit.html.eex
+++ b/lib/web/templates/admin/zone/edit.html.eex
@@ -10,6 +10,6 @@
   <div class="panel-container">
     <h2 class="text-lg">Edit</h2>
 
-    <%= render("_form.html", changeset: @changeset, url: Routes.admin_zone_path(@conn, :edit, @zone.id), submit: "Update") %>
+    <%= render("_form.html", changeset: @changeset, url: Routes.admin_zone_path(@conn, :update, @zone.id), submit: "Update") %>
   </div>
 </div>
