--- a/lib/web/templates/admin/zone/index.html.eex
+++ b/lib/web/templates/admin/zone/index.html.eex
@@ -12,7 +12,8 @@
       <thead>
         <tr>
           <th>Name</th>
-          <th>Actions</th>
+          <th class="w-48">Staged Changes?</th>
+          <th class="w-32">Actions</th>
         </tr>
       </thead>
 
@@ -20,9 +21,16 @@
         <%= Enum.map(@zones, fn zone -> %>
           <tr class="border-t">
             <td>
-              <%= link(zone.name, to: Routes.admin_zone_path(@conn, :show, zone.id), class: "text-blue-400") %>
+              <%= link(zone.name, to: Routes.admin_zone_path(@conn, :show, zone.id), class: "font-bold") %>
             </td>
-            <td class="actions">
+            <td class="w-48 text-center">
+              <%= if !Enum.empty?(zone.staged_changes) do %>
+                <span class="bg-purple-600 text-white rounded px-4 py-2 w-16 inline-block text-center">Yes</span>
+              <% else %>
+                <span class="bg-gray-700 text-white rounded px-4 py-2 w-16 inline-block text-center">No</span>
+              <% end %>
+            </td>
+            <td class="actions w-32">
               <%= link("View", to: Routes.admin_zone_path(@conn, :show, zone.id), class: "text-xs btn-secondary") %>
               <%= link("Edit", to: Routes.admin_zone_path(@conn, :edit, zone.id), class: "text-xs btn-secondary") %>
             </td>
