--- a/lib/web/templates/admin/staged_changes/index.html.eex
+++ b/lib/web/templates/admin/staged_changes/index.html.eex
@@ -8,12 +8,10 @@
 
 <div class="panel">
   <div class="panel-container">
-    <h2 class="text-lg">Zones</h2>
-
     <table class="table">
       <thead>
         <tr>
-          <th class="w-32">Zone</th>
+          <th class="w-32">Record</th>
           <th class="w-32 text-center">Attribute</th>
           <th>Change</th>
           <th class="w-32">Actions</th>
@@ -21,21 +19,26 @@
       </thead>
 
       <tbody>
-        <%= Enum.map(@zone_changes, fn zone_change -> %>
-          <tr class="border-t" id="zone-<%= zone_change.struct_id %>">
-            <td class="text-center">
-              <%= link(zone_change.struct.name, to: Routes.admin_zone_path(@conn, :show, zone_change.struct_id)) %>
-            </td>
-            <td class="text-center"><span class="font-mono"><%= zone_change.attribute %></span></td>
-            <td>
-              <div class="bg-gray-200 font-mono p-2"><%= Map.get(zone_change.struct, zone_change.attribute) %></div>
-              <div class="p-2">changes to</div>
-              <div class="bg-gray-200 font-mono p-2"><%= zone_change.value %></div>
-            </td>
-            <td>
-              <%= link("Delete", to: Routes.admin_staged_changes_path(@conn, :delete, zone_change.id, type: "zone"), method: :delete, class: "text-xs btn-secondary") %>
-            </td>
+        <%= Enum.map(@staged_changes, fn {schema, staged_changes} -> %>
+          <tr class="border-t">
+            <td colspan="4"><%= schema_header(schema) %></td>
           </tr>
+          <%= Enum.map(staged_changes, fn staged_change -> %>
+            <tr class="border-t" id="zone-<%= staged_change.struct_id %>">
+              <td class="text-center">
+                <%= struct_link(@conn, staged_change.struct) %>
+              </td>
+              <td class="text-center"><span class="font-mono"><%= staged_change.attribute %></span></td>
+              <td>
+                <div class="bg-gray-200 font-mono p-2"><%= Map.get(staged_change.struct, staged_change.attribute) %></div>
+                <div class="p-2">changes to</div>
+                <div class="bg-gray-200 font-mono p-2"><%= staged_change.value %></div>
+              </td>
+              <td>
+                <%= delete_staged_change_link(@conn, staged_change) %>
+              </td>
+            </tr>
+          <% end) %>
         <% end) %>
       </tbody>
     </table>
