--- a/lib/web/templates/registration/new.html.eex
+++ b/lib/web/templates/registration/new.html.eex
@@ -5,28 +5,19 @@
     <%= form_for(@changeset, Routes.registration_path(@conn, :create), [multipart: true, class: "form"], fn f -> %>
       <div class="md:flex md:items-center mb-6">
         <div class="md:w-1/3">
+          <%= label(f, :username, class: "label") %>
+        </div>
+        <div class="md:w-2/3">
+          <%= text_input(f, :username, class: "input") %>
+        </div>
+      </div>
+
+      <div class="md:flex md:items-center mb-6">
+        <div class="md:w-1/3">
           <%= label(f, :email, class: "label") %>
         </div>
         <div class="md:w-2/3">
           <%= text_input(f, :email, type: :email, class: "input") %>
-        </div>
-      </div>
-
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3">
-          <%= label(f, :first_name, class: "label") %>
-        </div>
-        <div class="md:w-2/3">
-          <%= text_input(f, :first_name, class: "input") %>
-        </div>
-      </div>
-
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3">
-          <%= label(f, :last_name, class: "label") %>
-        </div>
-        <div class="md:w-2/3">
-          <%= text_input(f, :last_name, class: "input") %>
         </div>
       </div>
 
