--- a/lib/web/templates/registration/new.html.eex
+++ b/lib/web/templates/registration/new.html.eex
@@ -3,41 +3,13 @@
 <div class="flex justify-center w-full flex-wrap">
   <div class="md:w-1/2">
     <%= form_for(@changeset, Routes.registration_path(@conn, :create), [multipart: true, class: "form"], fn f -> %>
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3">
-          <%= label(f, :username, class: "label") %>
-        </div>
-        <div class="md:w-2/3">
-          <%= text_input(f, :username, class: "input") %>
-        </div>
-      </div>
+      <%= FormView.text_field(f, :username) %>
 
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3">
-          <%= label(f, :email, class: "label") %>
-        </div>
-        <div class="md:w-2/3">
-          <%= text_input(f, :email, type: :email, class: "input") %>
-        </div>
-      </div>
+      <%= FormView.text_field(f, :email) %>
 
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3">
-          <%= label(f, :password, class: "label") %>
-        </div>
-        <div class="md:w-2/3">
-          <%= text_input(f, :password, type: "password", class: "input") %>
-        </div>
-      </div>
+      <%= FormView.password_field(f, :password) %>
 
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3">
-          <%= label(f, :password_confirmation, class: "label") %>
-        </div>
-        <div class="md:w-2/3">
-          <%= text_input(f, :password_confirmation, type: "password", class: "input") %>
-        </div>
-      </div>
+      <%= FormView.password_field(f, :password_confirmation) %>
 
       <div class="md:flex md:items-center">
         <div class="md:w-1/3"></div>
